// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Upload baseVue demo works fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden="hidden"
    type="file"
  />
  <div
    class="t-upload__single t-upload__single-file"
  >
    <div
      class="t-upload__trigger"
    >
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <svg
          class="t-icon t-icon-upload"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span
          class="t-button__text"
        >
          点击上传
        </span>
      </button>
    </div>
  </div>
  <small
    class="t-upload__tips t-size-s"
  >
    上传文件大小在 5M 以内
  </small>
</div>
`;

exports[`Upload Upload customDragVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload t-upload"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <svg
      class="t-icon t-icon-cloud-upload"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-button__text"
    >
      点击上传
  
    </span>
  </button>
   
  <br />
  <br />
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      type="file"
    />
    <div
      class="t-upload__dragger t-upload__dragger-center"
    >
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            自定义拖拽区域
          </span>
        </button>
         
        <!---->
         
        <br />
        <br />
      </div>
    </div>
    <transition-stub
      class="t-upload__dialog"
      duration="300"
      name="t-dialog-zoom__vue"
    >
      <div
        class="t-dialog__ctx t-dialog__ctx--fixed"
        style="display: none;"
      >
        <div
          class="t-dialog__mask"
        />
        <div
          class="t-dialog__wrap"
        >
          <div
            class="t-dialog__position t-dialog--top"
            style="padding-top: 10%;"
          >
            <div
              class="t-dialog t-dialog--default t-dialog__modal-default"
              style="width: auto;"
            >
              <div
                class="t-dialog__header"
              />
              <span
                class="t-dialog__close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t__dialog-body-img-box"
                >
                  <img
                    alt=""
                    src=""
                  />
                </div>
              </div>
              <div
                class="t-dialog__footer"
              />
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`Upload Upload draggableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div>
      是否自动上传：
      <div
        class="t-switch t-size-m t-is-checked"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content t-size-m"
        />
      </div>
    </div>
     
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="file"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            文件拖拽上传
          </span>
        </label>
         
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="image"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            图片拖拽上传
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
  </div>
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      type="file"
    />
    <div
      class="t-upload__dragger t-upload__dragger-center"
    >
      <div
        class="t-upload__trigger"
      >
        <div>
          <span
            class="t-upload--highlight"
          >
            点击上传
          </span>
          <span>
              /  拖拽到此区域
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload fileFlowListBatchUploadVue demo works fine 1`] = `
<div
  class="t-upload__file-flow-demo"
>
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      multiple="multiple"
      type="file"
    />
    <div
      class="t-upload__flow t-upload__flow-file-flow"
    >
      <div
        class="t-upload__flow-op"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
        <small
          class="t-size-s t-upload__flow-placeholder"
        >
          批量合并上传，会通过一个接口上传所有的文件
        </small>
      </div>
      <table
        class="t-upload__flow-table"
      >
        <tr>
          <th>
            文件名
          </th>
          <th>
            文件大小
          </th>
          <th>
            状态
          </th>
          <th>
            操作
          </th>
        </tr>
        <tr>
          <td
            colspan="4"
          >
            <div
              class="t-upload__flow-empty"
            >
              点击上方“选择文件”或将文件拖拽到此区域
            </div>
          </td>
        </tr>
      </table>
      <div
        class="t-upload__flow-bottom"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消上传
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="t-button__text"
          >
            点击上传
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload fileFlowListDuplicateVue demo works fine 1`] = `
<div
  class="t-upload__file-flow-demo"
>
  <div>
    是否重复文件上传：
    <div
      class="t-switch t-size-m"
    >
      <span
        class="t-switch__handle"
      />
      <div
        class="t-switch__content t-size-m"
      />
    </div>
  </div>
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      multiple="multiple"
      type="file"
    />
    <div
      class="t-upload__flow t-upload__flow-file-flow"
    >
      <div
        class="t-upload__flow-op"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
        <small
          class="t-size-s t-upload__flow-placeholder"
        >
          支持批量上传文件，文件格式不限，最多只能上传 10 份文件
        </small>
      </div>
      <table
        class="t-upload__flow-table"
      >
        <tr>
          <th>
            文件名
          </th>
          <th>
            文件大小
          </th>
          <th>
            状态
          </th>
          <th>
            操作
          </th>
        </tr>
        <tr>
          <td
            colspan="4"
          >
            <div
              class="t-upload__flow-empty"
            >
              点击上方“选择文件”或将文件拖拽到此区域
            </div>
          </td>
        </tr>
      </table>
      <div
        class="t-upload__flow-bottom"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消上传
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="t-button__text"
          >
            点击上传
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload fileFlowListVue demo works fine 1`] = `
<div
  class="t-upload__file-flow-demo"
>
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      multiple="multiple"
      type="file"
    />
    <div
      class="t-upload__flow t-upload__flow-file-flow"
    >
      <div
        class="t-upload__flow-op"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
        <small
          class="t-size-s t-upload__flow-placeholder"
        >
          支持批量上传文件，文件格式不限，最多只能上传 5 份文件
        </small>
      </div>
      <table
        class="t-upload__flow-table"
      >
        <tr>
          <th>
            文件名
          </th>
          <th>
            文件大小
          </th>
          <th>
            状态
          </th>
          <th>
            操作
          </th>
        </tr>
        <tr>
          <td
            colspan="4"
          >
            <div
              class="t-upload__flow-empty"
            >
              点击上方“选择文件”或将文件拖拽到此区域
            </div>
          </td>
        </tr>
      </table>
      <div
        class="t-upload__flow-bottom"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消上传
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="t-button__text"
          >
            点击上传
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Upload imageVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload"
>
  <div
    class="tdesign-demo-upload-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        type="file"
      />
      <ul
        class="t-upload__card"
        touploadfiles=""
      >
        <li
          class="t-upload__card-item t-is--background"
        >
          <div
            class="t-upload__card-container t-upload__card-box"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <p
              class="t-size-s"
            >
              点击上传图片
            </p>
          </div>
        </li>
      </ul>
      <transition-stub
        class="t-upload__dialog"
        duration="300"
        name="t-dialog-zoom__vue"
      >
        <div
          class="t-dialog__ctx t-dialog__ctx--fixed"
          style="display: none;"
        >
          <div
            class="t-dialog__mask"
          />
          <div
            class="t-dialog__wrap"
          >
            <div
              class="t-dialog__position t-dialog--top"
              style="padding-top: 10%;"
            >
              <div
                class="t-dialog t-dialog--default t-dialog__modal-default"
                style="width: auto;"
              >
                <div
                  class="t-dialog__header"
                />
                <span
                  class="t-dialog__close"
                >
                  <svg
                    class="t-icon t-icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t__dialog-body-img-box"
                  >
                    <img
                      alt=""
                      src=""
                    />
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                />
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <small
        class="t-upload__tips t-size-s"
      >
        请选择单张图片文件上传（上传成功状态演示）
      </small>
    </div>
  </div>
   
  <div
    class="tdesign-demo-upload-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        type="file"
      />
      <ul
        class="t-upload__card"
        touploadfiles=""
      >
        <li
          class="t-upload__card-item t-is--background"
        >
          <div
            class="t-upload__card-container t-upload__card-box"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <p
              class="t-size-s"
            >
              点击上传图片
            </p>
          </div>
        </li>
      </ul>
      <transition-stub
        class="t-upload__dialog"
        duration="300"
        name="t-dialog-zoom__vue"
      >
        <div
          class="t-dialog__ctx t-dialog__ctx--fixed"
          style="display: none;"
        >
          <div
            class="t-dialog__mask"
          />
          <div
            class="t-dialog__wrap"
          >
            <div
              class="t-dialog__position t-dialog--top"
              style="padding-top: 10%;"
            >
              <div
                class="t-dialog t-dialog--default t-dialog__modal-default"
                style="width: auto;"
              >
                <div
                  class="t-dialog__header"
                />
                <span
                  class="t-dialog__close"
                >
                  <svg
                    class="t-icon t-icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t__dialog-body-img-box"
                  >
                    <img
                      alt=""
                      src=""
                    />
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                />
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <small
        class="t-upload__tips t-size-s"
      >
        请选择单张图片文件上传（上传失败状态演示）
      </small>
    </div>
  </div>
   
  <div
    class="tdesign-demo-upload-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        type="file"
      />
      <ul
        class="t-upload__card"
        touploadfiles=""
      >
        <li
          class="t-upload__card-item t-is--background"
        >
          <div
            class="t-upload__card-container t-upload__card-box"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <p
              class="t-size-s"
            >
              点击上传图片
            </p>
          </div>
        </li>
      </ul>
      <transition-stub
        class="t-upload__dialog"
        duration="300"
        name="t-dialog-zoom__vue"
      >
        <div
          class="t-dialog__ctx t-dialog__ctx--fixed"
          style="display: none;"
        >
          <div
            class="t-dialog__mask"
          />
          <div
            class="t-dialog__wrap"
          >
            <div
              class="t-dialog__position t-dialog--top"
              style="padding-top: 10%;"
            >
              <div
                class="t-dialog t-dialog--default t-dialog__modal-default"
                style="width: auto;"
              >
                <div
                  class="t-dialog__header"
                />
                <span
                  class="t-dialog__close"
                >
                  <svg
                    class="t-icon t-icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t__dialog-body-img-box"
                  >
                    <img
                      alt=""
                      src=""
                    />
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                />
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <small
        class="t-upload__tips t-size-s"
      >
        请选择单张图片文件上传（自定义预览图片地址）
      </small>
    </div>
  </div>
   
  <div
    class="tdesign-demo-upload-item"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <ul
        class="t-upload__card"
        touploadfiles=""
      >
        <li
          class="t-upload__card-item t-is--background"
        >
          <div
            class="t-upload__card-container t-upload__card-box"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <p
              class="t-size-s"
            >
              点击上传图片
            </p>
          </div>
        </li>
      </ul>
      <transition-stub
        class="t-upload__dialog"
        duration="300"
        name="t-dialog-zoom__vue"
      >
        <div
          class="t-dialog__ctx t-dialog__ctx--fixed"
          style="display: none;"
        >
          <div
            class="t-dialog__mask"
          />
          <div
            class="t-dialog__wrap"
          >
            <div
              class="t-dialog__position t-dialog--top"
              style="padding-top: 10%;"
            >
              <div
                class="t-dialog t-dialog--default t-dialog__modal-default"
                style="width: auto;"
              >
                <div
                  class="t-dialog__header"
                />
                <span
                  class="t-dialog__close"
                >
                  <svg
                    class="t-icon t-icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t__dialog-body-img-box"
                  >
                    <img
                      alt=""
                      src=""
                    />
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                />
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <small
        class="t-upload__tips t-size-s"
      >
        允许选择多张图片文件上传，最多只能上传 3 张图片
      </small>
    </div>
  </div>
</div>
`;

exports[`Upload Upload imgFlowListVue demo works fine 1`] = `
<div
  class="t-upload__img-flow-demo"
>
  <div
    class="t-upload"
  >
    <input
      accept="image/*"
      hidden="hidden"
      multiple="multiple"
      type="file"
    />
    <div
      class="t-upload__flow t-upload__flow-image-flow"
    >
      <div
        class="t-upload__flow-op"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
        <small
          class="t-size-s t-upload__flow-placeholder"
        >
          支持批量上传图片文件
        </small>
      </div>
      <div
        class="t-upload__flow-card-area"
      >
        <div
          class="t-upload__flow-empty"
        >
          点击上方“选择文件”或将文件拖拽到此区域
        </div>
      </div>
      <div
        class="t-upload__flow-bottom"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            取消上传
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="t-button__text"
          >
            点击上传
          </span>
        </button>
      </div>
    </div>
    <transition-stub
      class="t-upload__dialog"
      duration="300"
      name="t-dialog-zoom__vue"
    >
      <div
        class="t-dialog__ctx t-dialog__ctx--fixed"
        style="display: none;"
      >
        <div
          class="t-dialog__mask"
        />
        <div
          class="t-dialog__wrap"
        >
          <div
            class="t-dialog__position t-dialog--top"
            style="padding-top: 10%;"
          >
            <div
              class="t-dialog t-dialog--default t-dialog__modal-default"
              style="width: auto;"
            >
              <div
                class="t-dialog__header"
              />
              <span
                class="t-dialog__close"
              >
                <svg
                  class="t-icon t-icon-close"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
              <div
                class="t-dialog__body"
              >
                <div
                  class="t__dialog-body-img-box"
                >
                  <img
                    alt=""
                    src=""
                  />
                </div>
              </div>
              <div
                class="t-dialog__footer"
              />
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`Upload Upload listTypeVue demo works fine 1`] = `
<section
  class="tdesign-demo-upload"
>
  <header
    class="tdesign-demo-upload-header"
  >
    <div
      class="t-upload"
      showfilelist="true"
    >
      <input
        accept=""
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file"
      >
        <div
          class="t-upload__trigger"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-outline t-button--theme-default"
              type="button"
            >
              <svg
                class="t-icon t-icon-upload"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-button__text"
              >
                选择文件
              </span>
            </button>
             
            <p
              class="describe"
            >
              请上传txt文件，大小在60M以内
            </p>
          </div>
        </div>
      </div>
    </div>
  </header>
</section>
`;

exports[`Upload Upload requestMethodVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="requestSuccessMethod"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上传成功示例
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="requestFailMethod"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          上传失败示例
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-upload"
  >
    <input
      accept=""
      hidden="hidden"
      type="file"
    />
    <div
      class="t-upload__single t-upload__single-file"
    >
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-button__text"
          >
            点击上传
          </span>
        </button>
      </div>
    </div>
    <small
      class="t-upload__tips t-size-s"
    >
      自定义上传方法需要返回成功或失败信息
    </small>
  </div>
</div>
`;

exports[`Upload Upload singleCustomVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload"
>
  <div>
    <div
      class="t-upload"
    >
      <input
        accept=""
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            自定义上传
          </span>
        </button>
      </div>
      <transition-stub
        class="t-upload__dialog"
        duration="300"
        name="t-dialog-zoom__vue"
      >
        <div
          class="t-dialog__ctx t-dialog__ctx--fixed"
          style="display: none;"
        >
          <div
            class="t-dialog__mask"
          />
          <div
            class="t-dialog__wrap"
          >
            <div
              class="t-dialog__position t-dialog--top"
              style="padding-top: 10%;"
            >
              <div
                class="t-dialog t-dialog--default t-dialog__modal-default"
                style="width: auto;"
              >
                <div
                  class="t-dialog__header"
                />
                <span
                  class="t-dialog__close"
                >
                  <svg
                    class="t-icon t-icon-close"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t__dialog-body-img-box"
                  >
                    <img
                      alt=""
                      src=""
                    />
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                />
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <small
        class="t-upload__tips t-size-s"
      >
        上传文件大小在 5M 以内
      </small>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Upload Upload singleInputVue demo works fine 1`] = `
<div
  class="tdesign-demo-upload"
>
  <div
    style="width: 350px;"
  >
    <div
      class="t-upload"
    >
      <input
        accept=""
        hidden="hidden"
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file-input"
      >
        <div
          class="t-upload__single-input-preview t-input"
        >
          <div
            class="t-input__inner t-upload__placeholder"
          >
            <span
              class="t-upload__single-input-text"
            >
              未选择文件
            </span>
          </div>
        </div>
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
      <small
        class="t-upload__tips t-size-s"
      >
        上传文件大小在 5M 以内
      </small>
    </div>
  </div>
</div>
`;

exports[`Upload Upload tableVue demo works fine 1`] = `
<section
  class="tdesign-demo-upload-multiple"
  style="width: 570px;"
>
  <header
    class="tdesign-demo-upload-multiple-header"
  >
    <div
      class="t-upload"
    >
      <input
        accept="image/*"
        hidden="hidden"
        multiple="multiple"
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <svg
              class="t-icon t-icon-upload"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
    </div>
  </header>
   
  <div
    class="tdesign-demo-upload-table"
  >
    <div
      class="tdesign-demo-upload-table-header"
    >
      <div
        class="tdesign-demo-upload-table__name"
      >
        文件名
      </div>
       
      <div
        class="tdesign-demo-upload-table__size"
      >
        大小
      </div>
       
      <div
        class="tdesign-demo-upload-table__status"
      >
        状态
      </div>
       
      <div
        class="tdesign-demo-upload-table__operator"
      >
        操作
      </div>
    </div>
     
    <div
      class="tdesign-demo-upload-table--empty"
    >
      <p>
        点击上方“选择文件”或将文件拖拽到此区域
      </p>
    </div>
     
  </div>
   
  <div
    class="tdesign-demo-upload-bottom"
  >
    <button
      class="t-button t-button--line"
    >
      取消
    </button>
     
    <button
      class="t-button t-button--primary"
    >
      开始上传
    </button>
  </div>
</section>
`;
